--- a/frontend/app/src/main/AndroidManifest.xml
+++ b/frontend/app/src/main/AndroidManifest.xml
@@ -11,7 +11,8 @@
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
-        android:theme="@style/Theme.FinalYearProject00">
+        android:theme="@style/Theme.FinalYearProject00"
+        android:usesCleartextTraffic="true">
 
         <uses-library android:name="org.apache.http.legacy" android:required="false" />
         <activity
