--- a/frontend/app/src/main/AndroidManifest.xml
+++ b/frontend/app/src/main/AndroidManifest.xml
@@ -19,8 +19,6 @@
             android:name=".MainActivity"
             android:exported="true"
             android:label="@string/app_name">
-
-
         </activity>
 
         <activity
@@ -45,6 +43,11 @@
 
         <activity
             android:name=".RegisterActivity"
+            android:label="@string/app_name">
+
+        </activity>
+        <activity
+            android:name=".PopupActivity"
             android:label="@string/app_name">
 
         </activity>
