--- a/frontend/app/build.gradle
+++ b/frontend/app/build.gradle
@@ -6,6 +6,10 @@ plugins {
 android {
     compileSdk 31
     useLibrary 'org.apache.http.legacy'
+    testOptions {
+        unitTests.returnDefaultValues = true
+        animationsDisabled = true
+    }
     packagingOptions {
         exclude 'META-INF/DEPENDENCIES'
         exclude 'META-INF/NOTICE'
@@ -39,10 +43,48 @@ android {
     }
 }
 
+def adb = android.getAdbExe().toString()
+afterEvaluate {
+    task grantAnimationPermissionDev(type: Exec, dependsOn: 'installDevDebug') {
+        commandLine "$adb shell settings put global window_animation_scale 0 &"
+        commandLine "$adb shell settings put global transition_animation_scale 0 &"
+        commandLine "$adb shell settings put global animator_duration_scale 0 &"
+    }
+
+    task grantAnimationPermissionProduction(type: Exec, dependsOn: 'installProductionDebug') {
+        commandLine "$adb shell pm grant com.example.finalyearproject00 android.permission.SET_ANIMATION_SCALE".split(' ')
+    }
+
+    // When launching individual tests from Android Studio, it seems that only the assemble tasks
+    // get called directly, not the install* versions
+    tasks.each { task ->
+        if (task.name.startsWith('assembleDevDebugAndroidTest')) {
+            task.dependsOn grantAnimationPermissionDev
+        } else if (task.name.startsWith('assembleProductionDebugAndroidTest')) {
+            task.dependsOn grantAnimationPermissionProduction
+        }
+    }
+}
+
 dependencies {
+    implementation 'androidx.test:rules:1.4.0'
+    androidTestImplementation 'androidx.test:runner:1.4.0'
+    androidTestImplementation "org.robolectric:robolectric:4.6"
+    androidTestImplementation 'androidx.test.espresso:espresso-core:3.4.0'
+    androidTestImplementation "androidx.test:core:1.4.0"
+    androidTestImplementation 'org.robolectric:robolectric:4.6'
+    androidTestImplementation 'androidx.test.espresso:espresso-intents:3.4.0'
+    //androidTestImplementation "org.mockito:mockito-core:4.0.0"
+    androidTestImplementation("org.mockito:mockito-all:1.10.19"){
+        exclude group: 'org.hamcrest:hamcrest-core'
+    }
+
+    androidTestImplementation 'org.hamcrest:hamcrest-core:1.3'
+    androidTestImplementation 'org.hamcrest:hamcrest-integration:1.3'
+    androidTestImplementation 'org.hamcrest:hamcrest-library:1.3'
     implementation platform('com.google.firebase:firebase-bom:29.2.0')
     implementation 'com.firebaseui:firebase-ui-auth:7.2.0'
-    implementation 'com.google.firebase:firebase-auth:21.0.2'
+    implementation 'com.google.firebase:firebase-auth:21.0.3'
     implementation 'org.mongodb:mongodb-driver:3.6.4'
     implementation 'com.android.volley:volley:1.2.1'
     implementation 'com.github.markushi:circlebutton:1.1'
@@ -50,12 +92,13 @@ dependencies {
     implementation 'com.jjoe64:graphview:4.2.2'
     implementation 'com.google.android.material:material:1.5.0'
     implementation 'androidx.constraintlayout:constraintlayout:2.1.3'
-    implementation 'androidx.lifecycle:lifecycle-livedata-ktx:2.4.0'
-    implementation 'androidx.lifecycle:lifecycle-viewmodel-ktx:2.4.0'
-    implementation 'androidx.navigation:navigation-fragment:2.4.0'
-    implementation 'androidx.navigation:navigation-ui:2.4.0'
+    implementation 'androidx.lifecycle:lifecycle-livedata-ktx:2.4.1'
+    implementation 'androidx.lifecycle:lifecycle-viewmodel-ktx:2.4.1'
+    implementation 'androidx.navigation:navigation-fragment:2.4.1'
+    implementation 'androidx.navigation:navigation-ui:2.4.1'
     implementation 'androidx.recyclerview:recyclerview:1.2.1'
-    testImplementation 'junit:junit:4.+'
+    testImplementation('junit:junit:4.11'){
+        exclude group: 'org.hamcrest:hamcrest-core'
+    }
     androidTestImplementation 'androidx.test.ext:junit:1.1.3'
-    androidTestImplementation 'androidx.test.espresso:espresso-core:3.4.0'
 }
