--- a/frontend/app/build.gradle
+++ b/frontend/app/build.gradle
@@ -87,6 +87,7 @@ dependencies {
     implementation 'com.google.firebase:firebase-auth:21.0.3'
     implementation 'org.mongodb:mongodb-driver:3.6.4'
     implementation 'com.android.volley:volley:1.2.1'
+    implementation "androidx.cardview:cardview:1.0.0"
     implementation 'com.github.markushi:circlebutton:1.1'
     implementation 'androidx.appcompat:appcompat:1.4.1'
     implementation 'com.jjoe64:graphview:4.2.2'
