--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,12 +1,11 @@
 version: 2.1
-orbs:
-  android: "1.0.3"
-  
 jobs:
- build:
-   executor: android/android
-
-   steps:
-     - checkout
-     - run:
-         command: ./gradlew build
+  build:
+    docker:
+      - image: alpine:3.7
+    steps:
+      - run:
+          name: The First Step
+          command: |
+            echo 'Hello World!'
+            echo 'This is the delivery pipeline' 
